2. Addressed folder redirection issue in Export-MessagesToPST where it wouldn't save to a redirected Desktop.
3. Addressed folder redirection issue in Set-LAPSshortcut where it wouldn't save to a redirected Desktop.
4. Addressed folder redirection issue in Set-NetworkConnectionsShortcut where it wouldn't save to a redirected Desktop.

######################
#                    #
#     2021.10.1      #
#                    #
######################
New features and other changes:
1. Added message to Set-Preferences about needing to log off then back in.
2. Added MECM config file item.
3. Added function Install-MECM.
4. Modified Copy-PowerShellJSON to create User and snippets folders if they don't already exist. $env:APPDATA\Code still has to exist or it will fail.
5. Fixed a variable issue in Test-EmailRelay. Body now appropriately shows recipient address.

######################
#                    #
#       2021.8       #
#                    #
######################
New features and other changes:
1. Added OneDrive config item and bumped config version.
2. Added function Copy-OneDrive.
3. Added Resources folder in module folder.
4. Added list of Modules and some information about them in CommandListModules.csv. Added the .csv to the Resources folder. This is used in Get-CommandList and Get-ModuleList.
5. Added function Get-CommandList.
6. Added function Get-ModuleList.
7. Moved InstallRemote.ps1 to Resources folder. Updated Install-Patches with the new path.
8. Added function Get-SplunkStatus.
9. Changed some text in remediation sub-module.
10. Made some small changes to add additional information to applications in Get-CommandList.
11. Added config items HPUniversalPrintDriver and LexmarkUniversalPrintDriver. Bumped config version.
12. Added functions Copy-HPUniversalPrintDriver and Install-HPUniversalPrintDriver.
13. Added functions Copy-LexmarkUniversalPrintDriver and Install-LexmarkUniversalPrintDriver.