@@ -12,6 +12,7 @@ New features and other changes:
 2. Addressed folder redirection issue in Export-MessagesToPST where it wouldn't save to a redirected Desktop.
 3. Addressed folder redirection issue in Set-LAPSshortcut where it wouldn't save to a redirected Desktop.
 4. Addressed folder redirection issue in Set-NetworkConnectionsShortcut where it wouldn't save to a redirected Desktop.
+5. Added CMLibrary config item.
 
 ######################
 #                    #
